--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "countapi-js": "^1.0.2",
     "emailjs-com": "^2.6.4",
     "node-sass": "^4.14.1",
     "object-assign": "^4.1.1",
     "react": "^16.13.1",
+    "react-countup": "^6.0.0",
     "react-dom": "^16.13.1",
     "react-flexbox-grid": "^2.1.2",
     "react-id-swiper": "^3.0.0",
