anim in about section & rearrange other intrest section

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "cordova-plugin-chrome-apps-identity": "^1.4.6",
     "countapi-js": "^1.0.2",
     "emailjs-com": "^2.6.4",
+    "node": "^14.19.0",
     "node-sass": "^4.14.1",
     "object-assign": "^4.1.1",
     "react": "^16.13.1",
