--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-countup": "^6.0.0",
     "react-dom": "^16.13.1",
     "react-flexbox-grid": "^2.1.2",
+    "react-grid-layout": "^1.3.3",
     "react-id-swiper": "^3.0.0",
     "react-masonry-css": "^1.0.14",
     "react-reveal": "^1.2.2",
