--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "neerajdhurandher",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://neerajdhurandher.tk",
+  "homepage": "https://neerajdhurandher.me",
   "dependencies": {
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
@@ -26,6 +26,7 @@
     "react-rounded-image": "^2.0.13",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
+    "reactjs-popup": "^2.0.5",
     "swiper": "^5.4.0",
     "typescript": "^4.3.5",
     "typewriter-effect": "^2.18.0"
