--- a/package.json
+++ b/package.json
@@ -4,32 +4,32 @@
   "private": true,
   "homepage": "https://neerajdhurandher.me",
   "dependencies": {
-    "@material-ui/core": "^4.12.1",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "cordova-plugin-chrome-apps-identity": "^1.4.6",
-    "countapi-js": "^1.0.2",
-    "emailjs-com": "^2.6.4",
-    "node": "^14.19.0",
-    "node-sass": "^4.14.1",
-    "object-assign": "^4.1.1",
-    "react": "^16.13.1",
-    "react-countup": "^6.0.0",
-    "react-dom": "^16.13.1",
-    "react-flexbox-grid": "^2.1.2",
-    "react-grid-layout": "^1.3.3",
-    "react-id-swiper": "^3.0.0",
-    "react-masonry-css": "^1.0.14",
-    "react-reveal": "^1.2.2",
-    "react-rounded-image": "^2.0.13",
+    "@material-ui/core": "4.12.1",
+    "@material-ui/icons": "4.11.2",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.5.0",
+    "@testing-library/user-event": "7.2.1",
+    "cordova-plugin-chrome-apps-identity": "1.4.6",
+    "countapi-js": "1.0.2",
+    "emailjs-com": "2.6.4",
+    "node": "14.19.0",
+    "node-sass": "4.14.1",
+    "object-assign": "4.1.1",
+    "react": "16.13.1",
+    "react-countup": "6.0.0",
+    "react-dom": "16.13.1",
+    "react-flexbox-grid": "2.1.2",
+    "react-grid-layout": "1.3.3",
+    "react-id-swiper": "3.0.0",
+    "react-masonry-css": "1.0.14",
+    "react-reveal": "1.2.2",
+    "react-rounded-image": "2.0.13",
     "react-scripts": "3.4.1",
-    "react-scroll": "^1.7.16",
-    "reactjs-popup": "^2.0.5",
-    "swiper": "^5.4.0",
-    "typescript": "^4.3.5",
-    "typewriter-effect": "^2.18.0"
+    "react-scroll": "1.7.16",
+    "reactjs-popup": "2.0.5",
+    "swiper": "5.4.0",
+    "typescript": "4.3.5",
+    "typewriter-effect": "2.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
